Enhance form handling and testing capabilities across the application
- Add Vitest testing commands to package.json for improved testing workflow.
- Refactor account settings, login, registration, and password reset forms to utilize useFormAction for streamlined submission handling.
- Implement useEffect hooks to manage success states and reset forms upon successful actions.
- Update invite and tenant creation forms to enhance user feedback and reset logic after submission.
- Adjust imports for tenant-related actions to maintain consistency across the codebase.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
